Corrected FindBugs warnings about inconsistent synchronization. Corrected several doccheck warnings about #see tags. Changed query/download methods to pass URL string rather than filename. Update comments and styling on IServerManager, FileDownloadTest, RemoteModelTest, and ServletTest.